# hybrid-secret-scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  ai_scanner.py  cli_runtime.py  make_valid.py  requirements-dev.txt  requirements-ml.txt  requirements-train.txt  requirements.txt  run_creddata_benchmark.py  run_hybrid_benchmark.py  test_ai.py
.github/: dependabot.yml
adapters/: adapter_config.json
backend/: .env.example  README.md  api_server.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_backend.sh
backend/examples/: comprehensive_secret_test_corpus.txt
backend/ml_pipeline/: analyze_dataset.py
backend/scripts/: __init__.py  evaluate_model.py
backend/src/: config.py  context_extractor.py  fast_scanner.py  llm_engine.py  models.py  scanner.py
backend/tests/: test_context_extractor.py  test_ingestion.py  test_scanner.py
docs/: GEMINI_CONTEXT.md
examples/: dummy_app.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
frontend/src/app/api/scan/: route.ts
frontend/src/components/: editor-client.tsx
ml_pipeline/: analyze_dataset.py  mac_train_qlora.py  prep_mlx_data.py  prepare_dataset.py  train_qlora.py
scripts/: evaluate_model.py  generate_charts.py  make_valid.py  test_ai.py
src/: config.py  context_extractor.py  ingestion.py  llm_engine.py  models.py  scanner.py
tests/: test_context_extractor.py  test_entrypoints_smoke.py  test_ingestion.py  test_llm_engine.py  test_scanner.py
